--- a/app/src/main/res/layout/activity_animal.xml
+++ b/app/src/main/res/layout/activity_animal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Animal">
+    tools:context=".animal_info">
 
 <LinearLayout
 android:layout_width="match_parent"
@@ -34,11 +34,9 @@ android:id="@+id/aPreview">
 
     <Button
         android:id="@+id/btnAudioAnimal"
-
         android:layout_width="55dp"
         android:layout_height="55dp"
-
-        android:layout_marginTop="320dp"
+        android:layout_marginTop="410dp"
         android:layout_marginEnd="230dp"
         android:layout_marginRight="250dp"
         android:background="@mipmap/audio_round"
@@ -56,7 +54,8 @@ android:id="@+id/aPreview">
         android:layout_marginLeft="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="0dp"
         android:background="@drawable/rounded_rectangle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
