--- a/app/src/main/res/layout/activity_animal_game.xml
+++ b/app/src/main/res/layout/activity_animal_game.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".animalGame">
+    tools:context=".animal_start_screen">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,7 +36,7 @@
         android:id="@+id/frameLayout2"
         android:layout_width="270dp"
         android:layout_height="170dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="90dp"
 
         android:background="@drawable/rounded_rectangle"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,14 +45,13 @@
 
         <TextView
             android:id="@+id/textView13"
-            android:layout_width="250dp"
+            android:layout_width="270dp"
             android:layout_height="69dp"
             android:gravity="center"
             android:text="@string/animal_game_started_text1"
             android:textColor="#FFFFFF"
-            android:textSize="42sp"
-
-            android:textStyle="bold" />
+            android:textSize="28sp"
+            app:fontFamily="@font/peace_sans" />
 
         <TextView
 
@@ -66,10 +65,10 @@
             android:layout_marginRight="50dp"
             android:layout_marginBottom="0dp"
             android:gravity="center"
+            app:fontFamily="@font/peace_sans"
             android:text="@string/animal_game_started_text2"
             android:textColor="#FFFFFF"
-            android:textSize="45sp"
-            android:textStyle="bold" />
+            android:textSize="60sp" />
 
 
     </FrameLayout>
@@ -93,7 +92,7 @@
         android:layout_width="270dp"
 
         android:layout_height="188dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="120dp"
         android:background="@drawable/rounded_rectangle"
         app:fontFamily="@font/peace_sans"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -109,13 +108,13 @@
 
         <TextView
             android:id="@+id/textView15"
-            android:layout_width="250dp"
+            android:layout_width="270dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/animal_game_started_text4"
             android:textColor="#FDFDFD"
             android:textSize="30sp"
-            android:textStyle="bold" />
+            app:fontFamily="@font/peace_sans" />
 
         <TextView
             android:id="@+id/correctStr"
@@ -131,7 +130,6 @@
             android:text="@string/animal_game_started_text5"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
-            android:textStyle="bold"
 
             android:visibility="invisible" />
 
@@ -149,7 +147,6 @@
             android:text="@string/animal_game_started_text6"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
-            android:textStyle="bold"
 
             android:visibility="invisible" />
 
