--- a/app/src/main/res/layout/activity_color.xml
+++ b/app/src/main/res/layout/activity_color.xml
@@ -29,7 +29,7 @@
         android:layout_width="55dp"
         android:layout_height="55dp"
 
-        android:layout_marginTop="320dp"
+        android:layout_marginTop="350dp"
         android:layout_marginEnd="230dp"
         android:layout_marginRight="250dp"
         android:background="@mipmap/audio_round"
@@ -47,7 +47,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="0dp"
         android:background="@drawable/rounded_rectangle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,11 +66,11 @@
             android:layout_marginRight="30dp"
             android:layout_marginBottom="25dp"
             android:background="@drawable/rounded_button"
-            app:fontFamily="@font/peace_sans"
             android:gravity="center"
             android:shadowColor="#00000000"
             android:text="@string/START_colorGame"
             android:textSize="24sp"
+            app:fontFamily="@font/peace_sans"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -85,11 +85,11 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="50dp"
             android:layout_marginRight="200dp"
-            app:fontFamily="@font/peace_sans"
             android:gravity="center"
             android:text="@string/recognition_game_text"
             android:textColor="#FFE683"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            app:fontFamily="@font/peace_sans" />
 
         <TextView
             android:id="@+id/textView4"
@@ -100,11 +100,11 @@
             android:layout_marginTop="90dp"
             android:layout_marginEnd="50dp"
             android:layout_marginRight="200dp"
-            app:fontFamily="@font/peace_sans"
-
             android:text="@string/START_colorGame_text1"
+
             android:textColor="#FFEFFF"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:fontFamily="@font/peace_sans" />
 
         <TextView
             android:id="@+id/textView5"
@@ -115,11 +115,11 @@
             android:layout_marginTop="195dp"
             android:layout_marginEnd="50dp"
             android:layout_marginRight="200dp"
-            app:fontFamily="@font/peace_sans"
-
             android:text="@string/START_colorGame_text2"
+
             android:textColor="#FFEFFF"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:fontFamily="@font/peace_sans" />
 
         <TextView
             android:id="@+id/textView6"
@@ -130,11 +130,11 @@
             android:layout_marginTop="250dp"
             android:layout_marginEnd="50dp"
             android:layout_marginRight="200dp"
-            app:fontFamily="@font/peace_sans"
-
             android:text="@string/START_colorGame_text3"
+
             android:textColor="#FFEFFF"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:fontFamily="@font/peace_sans" />
 
         <TextView
             android:id="@+id/textView7"
@@ -145,11 +145,11 @@
             android:layout_marginTop="300dp"
             android:layout_marginEnd="50dp"
             android:layout_marginRight="200dp"
-            app:fontFamily="@font/peace_sans"
             android:gravity="center"
             android:text="@string/START_colorGame_text4"
             android:textColor="#FFEFFF"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:fontFamily="@font/peace_sans" />
 
         <LinearLayout
             android:id="@+id/cPreview"
