--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,11 @@
     <Button
         android:id="@+id/btnColor"
         android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginRight="90dp"
-        android:layout_marginBottom="50dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginLeft="85dp"
+        android:layout_marginEnd="85dp"
+        android:layout_marginRight="85dp"
         android:background="@drawable/rounded_button"
         android:shadowColor="#00000000"
         android:text="@string/main_button_colors"
@@ -35,12 +33,12 @@
     <Button
         android:id="@+id/button2"
         android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginRight="90dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginLeft="85dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="85dp"
+        android:layout_marginRight="85dp"
         android:background="@drawable/rounded_button"
         android:shadowColor="#00000000"
         android:text="@string/main_button_shapes"
@@ -48,6 +46,7 @@
         android:textSize="25sp"
         android:typeface="normal"
         app:fontFamily="@font/peace_sans"
+        app:layout_constraintBottom_toTopOf="@+id/btnAnimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,20 +55,21 @@
     <Button
         android:id="@+id/btnAnimal"
         android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginRight="90dp"
-        android:background="@drawable/rounded_button"
+        android:layout_height="0dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginLeft="85dp"
 
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="85dp"
+        android:layout_marginRight="85dp"
+        android:background="@drawable/rounded_button"
         android:shadowColor="#00000000"
         android:text="@string/main_button_animals"
-        android:textSize="25sp"
-        app:fontFamily="@font/peace_sans"
         android:textAllCaps="false"
+        android:textSize="25sp"
         android:typeface="normal"
+        app:fontFamily="@font/peace_sans"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,13 +77,16 @@
 
     <ImageView
         android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="425dp"
         android:contentDescription="@string/image_desc"
-        android:layout_width="329dp"
-        android:layout_height="180dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -92,19 +95,21 @@
     <Button
         android:id="@+id/button4"
         android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginRight="90dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginLeft="85dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="85dp"
+        android:layout_marginRight="85dp"
+        android:layout_marginBottom="105dp"
         android:background="@drawable/rounded_button"
-        app:fontFamily="@font/peace_sans"
         android:shadowColor="#00000000"
         android:text="@string/main_button_counting"
         android:textAllCaps="false"
         android:textSize="25sp"
         android:typeface="normal"
+        app:fontFamily="@font/peace_sans"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,14 +117,14 @@
 
     <Button
         android:id="@+id/langbutton"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="555dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginRight="90dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="240dp"
+        android:layout_marginRight="240dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/rounded_button"
         android:shadowColor="#00000000"
         android:text="@string/lang"
@@ -131,19 +136,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
 
     <Button
         android:id="@+id/btnColChange"
-        android:layout_width="115dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="150dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="555dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginRight="90dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="110dp"
+        android:layout_marginRight="110dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/rounded_button"
         android:shadowColor="#00000000"
         android:text="@string/change_color"
@@ -153,21 +157,19 @@
         app:fontFamily="@font/peace_sans"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toEndOf="@+id/langbutton"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
 
     <Button
         android:id="@+id/btn_info"
-        android:layout_width="65dp"
-        android:layout_height="66dp"
-        android:layout_marginStart="300dp"
-        android:layout_marginLeft="290dp"
-        android:layout_marginTop="555dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="25dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/rounded_information"
         android:text="@string/main_information"
         android:textAllCaps="false"
@@ -175,10 +177,9 @@
         app:fontFamily="@font/peace_sans"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.375"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/btnColChange"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
